--- a/Apache_Beam_Workout.ipynb
+++ b/Apache_Beam_Workout.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMAv1lYKOIlCjvTZE5jNnqS",
+      "authorship_tag": "ABX9TyO4VXWpCAQM51tPg0wO1g3I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -118,12 +118,12 @@
     {
       "cell_type": "code",
       "source": [
-        "!{'mkdir -p data'}"
+        "!{'mkdir -p data1'}"
       ],
       "metadata": {
         "id": "BuZrOdR6zIQZ"
       },
-      "execution_count": 2,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -136,15 +136,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JBXeCuIOzPlG",
-        "outputId": "5c1c39ab-2ba1-4e08-981f-4922c6699bc8"
+        "outputId": "7eabc7bb-da9a-4861-b242-f4c580cbe33f"
       },
-      "execution_count": 3,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "data  sample_data\n"
+            "data  data.txt\tdept_data.txt  sample_data\n"
           ]
         }
       ]
@@ -161,9 +161,9 @@
           "height": 74
         },
         "id": "qxfShfu7ziIw",
-        "outputId": "8d169a84-d145-432d-866a-cc61ce8b6216"
+        "outputId": "70ab5fd0-cba4-47aa-f076-c9052dcd5c2d"
       },
-      "execution_count": 4,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "display_data",
@@ -173,9 +173,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-1206a6b2-7531-4c4f-8b29-866a6e061859\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-fb8ff3ab-1154-4ecd-bfe5-9c7caf85612c\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-1206a6b2-7531-4c4f-8b29-866a6e061859\">\n",
+              "     <output id=\"result-fb8ff3ab-1154-4ecd-bfe5-9c7caf85612c\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -363,7 +363,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving dept_data.txt to dept_data.txt\n"
+            "Saving data.txt to data.txt\n"
           ]
         }
       ]
@@ -1555,15 +1555,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N6SkqXMN6CLU",
-        "outputId": "014c3de7-ab63-41ee-cc05-2df318cf8ee0"
+        "outputId": "5530f251-9e84-4120-f5ba-bac53f850217"
       },
-      "execution_count": 11,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "data  dept_data.txt  sample_data\n"
+            "data  data1  dept_data.txt  sample_data\n"
           ]
         }
       ]
@@ -1982,6 +1982,265 @@
             "('Kumiko', 31)\n",
             "('Gaston', 31)\n",
             "('Ayumi', 30)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import apache_beam as beam\n",
+        "\n",
+        "def SplitRow(element):\n",
+        "    return element.split(',')\n",
+        "\n",
+        "p = beam.Pipeline()\n",
+        "\n",
+        "\n",
+        "input_collection = ( \n",
+        "                      p \n",
+        "                      | \"Read from text file\" >> beam.io.ReadFromText('dept_data.txt')\n",
+        "                      | \"Split rows\" >> beam.Map(SplitRow)\n",
+        "                   )\n",
+        "\n",
+        "accounts_count = (\n",
+        "                      input_collection\n",
+        "                      | 'Get all Accounts dept persons' >> beam.Filter(lambda record: record[3] == 'Accounts')\n",
+        "                      | 'Pair each accounts employee with 1' >> beam.Map(lambda record: (\"Accounts, \" +record[1], 1))\n",
+        "                      | 'Group and sum1' >> beam.CombinePerKey(sum)\n",
+        "                      #| 'Write results for account' >> beam.io.WriteToText('data/Account')\n",
+        "                 )\n",
+        "\n",
+        "hr_count = (\n",
+        "                input_collection\n",
+        "                | 'Get all HR dept persons' >> beam.Filter(lambda record: record[3] == 'HR')\n",
+        "                | 'Pair each hr employee with 1' >> beam.Map(lambda record: (\"HR, \" +record[1], 1))\n",
+        "                | 'Group and sum' >> beam.CombinePerKey(sum)\n",
+        "                #| 'Write results for hr' >> beam.io.WriteToText('data/HR')\n",
+        "           )\n",
+        "\n",
+        "output =(\n",
+        "         (accounts_count,hr_count)\n",
+        "    | beam.Flatten()\n",
+        "    | beam.io.WriteToText('data/both')\n",
+        ")\n",
+        "\n",
+        "p.run()\n",
+        "  \n",
+        "# Sample the first 20 results, remember there are no ordering guarantees.\n",
+        "!{('head -n 20 data/both-00000-of-00001')}\n",
+        "\n",
+        "\n",
+        "#!{('head -n 20 data/HR-00000-of-00001')}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "g0MURS46fhEK",
+        "outputId": "9f50c692-d285-405a-81a4-1c856e21ba1d"
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:apache_beam.io.filebasedsink:Deleting 1 existing files in target path matching: -*-of-%(num_shards)05d\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('Accounts, Marco', 31)\n",
+            "('Accounts, Rebekah', 31)\n",
+            "('Accounts, Itoe', 31)\n",
+            "('Accounts, Edouard', 31)\n",
+            "('Accounts, Kyle', 62)\n",
+            "('Accounts, Kumiko', 31)\n",
+            "('Accounts, Gaston', 31)\n",
+            "('Accounts, Ayumi', 30)\n",
+            "('HR, Beryl', 62)\n",
+            "('HR, Olga', 31)\n",
+            "('HR, Leslie', 31)\n",
+            "('HR, Mindy', 31)\n",
+            "('HR, Vicky', 31)\n",
+            "('HR, Richard', 31)\n",
+            "('HR, Kirk', 31)\n",
+            "('HR, Kaori', 31)\n",
+            "('HR, Oscar', 31)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ls -ltr data"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JprvD59pk86Y",
+        "outputId": "0e7a26c3-3073-44d4-d7a9-7868eac5cd5b"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "total 172\n",
+            "-rw-r--r-- 1 root root     89 Jan 23 09:12 outCreate1-00000-of-00001\n",
+            "-rw-r--r-- 1 root root     18 Jan 23 09:17 outCreate2-00000-of-00001\n",
+            "-rw-r--r-- 1 root root     64 Jan 23 09:37 outCreate3-00000-of-00001\n",
+            "-rw-r--r-- 1 root root     52 Jan 23 09:41 outCreate4-00000-of-00001\n",
+            "drwxr-xr-x 2 root root   4096 Jan 23 10:39 beam-temp-output_new-3228cfdc9b0a11ed85eb0242ac1c000c\n",
+            "drwxr-xr-x 2 root root   4096 Jan 23 10:41 beam-temp-output_new-820445c29b0a11ed85eb0242ac1c000c\n",
+            "drwxr-xr-x 2 root root   4096 Jan 23 10:41 beam-temp-output_new-8e1a554a9b0a11ed85eb0242ac1c000c\n",
+            "drwxr-xr-x 2 root root   4096 Jan 23 10:42 beam-temp-output_new-ab5b5d849b0a11ed85eb0242ac1c000c\n",
+            "drwxr-xr-x 2 root root   4096 Jan 23 10:43 beam-temp-output_new-d8257b9c9b0a11ed85eb0242ac1c000c\n",
+            "drwxr-xr-x 2 root root   4096 Jan 23 10:45 beam-temp-output_new-151081469b0b11ed85eb0242ac1c000c\n",
+            "drwxr-xr-x 2 root root   4096 Jan 23 10:54 beam-temp-output_new-4ebc73549b0c11ed85eb0242ac1c000c\n",
+            "drwxr-xr-x 2 root root   4096 Jan 23 10:59 beam-temp-output_new-0b2c14b89b0d11ed85eb0242ac1c000c\n",
+            "-rw-r--r-- 1 root root    116 Jan 23 11:49 output_new-00000-of-00001\n",
+            "-rw-r--r-- 1 root root    116 Jan 23 11:56 output_new_final-00000-of-00001\n",
+            "-rw-r--r-- 1 root root    196 Jan 23 12:35 Account-00000-of-00001\n",
+            "-rw-r--r-- 1 root root    163 Jan 23 12:35 HR-00000-of-00001\n",
+            "-rw-r--r-- 1 root root    359 Jan 23 12:40 both-00000-of-00001\n",
+            "-rw-r--r-- 1 root root 103942 Jan 23 12:56 wordcount-00000-of-00001\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import apache_beam as beam\n",
+        "with beam.Pipeline() as p1:\n",
+        "  # Read the input file\n",
+        "  lines = p1 | 'Read File' >> beam.io.ReadFromText('data.txt')\n",
+        "\n",
+        "  # Split the lines into words\n",
+        "  words = lines | 'Split into Words' >> beam.FlatMap(lambda x: x.split())\n",
+        "\n",
+        "  # Count the number of occurrences of each word\n",
+        "  word_counts = words | 'Count Words' >> beam.combiners.Count.PerElement()\n",
+        "\n",
+        "  # Write the results to a file\n",
+        "  word_counts | 'Write File' >> beam.io.WriteToText('data/wordcount')\n",
+        "\n",
+        "  # visualize output\n",
+        "  !{('head -n 20 data/wordcount-00000-of-00001')}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kTduRyZUlYfi",
+        "outputId": "77e1050a-520d-4d7f-de5d-dc44aa8df272"
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('KING', 242)\n",
+            "('LEAR', 222)\n",
+            "('DRAMATIS', 1)\n",
+            "('PERSONAE', 1)\n",
+            "('king', 29)\n",
+            "('of', 439)\n",
+            "('Britain', 1)\n",
+            "('(KING', 1)\n",
+            "('LEAR:)', 1)\n",
+            "('OF', 15)\n",
+            "('FRANCE:', 1)\n",
+            "('DUKE', 3)\n",
+            "('BURGUNDY', 6)\n",
+            "('(BURGUNDY:)', 1)\n",
+            "('CORNWALL', 56)\n",
+            "('(CORNWALL:)', 1)\n",
+            "('ALBANY', 60)\n",
+            "('(ALBANY:)', 1)\n",
+            "('EARL', 2)\n",
+            "('KENT', 136)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:apache_beam.io.filebasedsink:Deleting 1 existing files in target path matching: -*-of-%(num_shards)05d\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import apache_beam as beam\n",
+        "import re\n",
+        "\n",
+        "with beam.Pipeline() as p1:\n",
+        "  # Read the input file\n",
+        "  lines = p1 | 'Read File' >> beam.io.ReadFromText('data.txt')\n",
+        "\n",
+        "  # Split the lines into words\n",
+        "  words = lines | 'Split into Words' >> beam.FlatMap(lambda x: re.findall(r'\\w+', x))\n",
+        "\n",
+        "  # Count the number of occurrences of each word\n",
+        "  word_counts = words | 'Count Words' >> beam.combiners.Count.PerElement()\n",
+        "\n",
+        "  # Write the results to a file\n",
+        "  word_counts | 'Write File' >> beam.io.WriteToText('data/wordcountregex')\n",
+        "\n",
+        "  # visualize output\n",
+        "  !{('head -n 20 data/wordcountregex-00000-of-00001')}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RseE8euJt3WG",
+        "outputId": "d46a34b9-0c8d-4711-828e-89fd1f3ded5d"
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('KING', 243)\n",
+            "('LEAR', 236)\n",
+            "('DRAMATIS', 1)\n",
+            "('PERSONAE', 1)\n",
+            "('king', 65)\n",
+            "('of', 447)\n",
+            "('Britain', 2)\n",
+            "('OF', 15)\n",
+            "('FRANCE', 10)\n",
+            "('DUKE', 3)\n",
+            "('BURGUNDY', 8)\n",
+            "('CORNWALL', 63)\n",
+            "('ALBANY', 68)\n",
+            "('EARL', 2)\n",
+            "('KENT', 156)\n",
+            "('GLOUCESTER', 143)\n",
+            "('EDGAR', 126)\n",
+            "('son', 29)\n",
+            "('to', 440)\n",
+            "('Gloucester', 36)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:apache_beam.io.filebasedsink:Deleting 1 existing files in target path matching: -*-of-%(num_shards)05d\n"
           ]
         }
       ]
